versions/v4.0.0/build/dts/api/bindings/flash_controller/st,stm32-xspi-nor.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/flash_controller/st,stm32-xspi-nor.html
original_path: build/dts/api/bindings/flash_controller/st,stm32-xspi-nor.html
---

# st,stm32-xspi-nor (on ospi bus)

Vendor: [STMicroelectronics](../../bindings.md#dt-vendor-st)

Note

An implementation of a driver matching this compatible is available in
[drivers/flash/flash\_stm32\_xspi.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/flash/flash_stm32_xspi.c).

## Description

```text
STM32 XSPI Flash controller supporting the JEDEC CFI interface

Representation of a serial flash on a xspi bus:

    mx25lm51245: xspi-nor-flash@70000000 {
            compatible = "st,stm32-xspi-nor";
            reg = <0x70000000 DT_SIZE_M(64)>; /* 512 Mbits */
            data-mode = <XSPI_OCTO_MODE>; /* access on 8 data lines */
            data-rate = <XSPI_DTR_TRANSFER>; /* access in DTR */
            ospi-max-frequency = <DT_FREQ_M(50)>;
            status = "okay";
    };
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `spi-bus-width` | `int` | ```text The width of XSPI bus to which flash memory is connected.  Possible values are :  - XSPI_SPI_MODE  <1> = SPI mode on 1 data line  - XSPI_DUAL_MODE <2> = Dual mode on 2 data lines  - XSPI_QUAD_MODE <4> = Quad mode on 4 data lines  - XSPI_OCTO_MODE <8> = Octo mode on 8 data lines ```  This property is **required**.  Legal values: `1`, `2`, `4`, `8` |
| `data-rate` | `int` | ```text The SPI data Rate is STR or DTR  Possible values are :  - XSPI_STR_TRANSFER <1> = Single Rate Transfer  - XSPI_DTR_TRANSFER <2> = Dual Rate Transfer (only with XSPI_OCTO_MODE) ```  This property is **required**.  Legal values: `1`, `2` |
| `ncs-line` | `int` | ```text Specifies which nCS line of the XSPI IO Manager is connected to the Flash. ```  Default value: `1`  Legal values: `1`, `2` |
| `ospi-max-frequency` | `int` | ```text Maximum clock frequency of device's OSPI interface in Hz ```  This property is **required**. |
| `reset-gpios` | `phandle-array` | ```text RESETn pin ``` |
| `reset-gpios-duration` | `int` | ```text The duration (in ms) for the flash memory reset pulse ``` |
| `writeoc` | `string` | ```text The value encodes number of I/O lines used for the opcode, address, and data.  There is no info about quad page program opcodes in the SFDP tables, hence it has been assumed that NOR flash memory supporting 1-4-4 mode also would support fast page programming.  Intended for modes other than OSPI_OPI_MODE.  If absent, then program page opcode is determined by the `spi-bus-width`:  * OSPI_SPI_MODE -> PP 1-1-1 (0x02) * OSPI_DUAL_MODE -> PP 1-1-2 (0xA2) * OSPI_QUAD_MODE -> PP 1-4-4 (0x38) ```  Legal values: `'PP'`, `'PP_1_1_2'`, `'PP_1_1_4'`, `'PP_1_4_4'` |
| `four-byte-opcodes` | `boolean` | ```text Some NOR-Flash ICs use different opcodes when operating in 4 byte addressing mode.  When enabled, then 3 byte opcodes will be converted to 4 byte opcodes.  * PP 1-1-1 (0x02) -> PP 1-1-1 4B (0x12) * PP 1-1-4 (0x32) -> PP 1-1-4 4B (0x34) * PP 1-4-4 (0x38) -> PP 1-4-4 4B (0x3E)  * READ 1-1-1 (0x03) -> READ 1-1-1 4B (0x13) * READ FAST 1-1-1 (0x0B) -> READ FAST 1-1-1 4B (0x0C) * DREAD 1-1-2 (0x3B) -> DREAD 1-1-2 4B (0x3C) * 2READ 1-2-2 (0xBB) -> 2READ 1-2-2 4B (0xBC) * QREAD 1-1-4 (0x6B) -> QREAD 1-1-4 4B (0x6C) * 4READ 1-4-4 (0xEB) -> 4READ 1-4-4 4B (0xEC) ``` |
| `jedec-id` | `uint8-array` | ```text JEDEC ID as manufacturer ID, memory type, memory density ``` |
| `size` | `int` | ```text flash capacity in bits ``` |
| `sfdp-bfp` | `uint8-array` | ```text Contains the 32-bit words in little-endian byte order from the JESD216 Serial Flash Discoverable Parameters Basic Flash Parameters table.  This provides flash-specific configuration information in cases were runtime retrieval of SFDP data is not desired. ``` |
| `quad-enable-requirements` | `string` | ```text Quad Enable Requirements value from JESD216 BFP DW15.  Use NONE if the device detects 1-1-4 and 1-4-4 modes by the instruction.  Use S1B6 if QE is bit 6 of the first status register byte, and can be configured by reading then writing one byte with RDSR and WRSR.  For other fields see the specification. ```  Legal values: `'NONE'`, `'S2B1v1'`, `'S1B6'`, `'S2B7'`, `'S2B1v4'`, `'S2B1v5'`, `'S2B1v6'` |
| `enter-4byte-addr` | `int` | ```text Enter 4-Byte Addressing value from JESD216 BFP DW16  This property is ignored if the device is configured to use SFDP data from the sfdp-bfp property (CONFIG_SPI_NOR_SFDP_DEVICETREE) or to read SFDP properties at runtime (CONFIG_SPI_NOR_SFDP_RUNTIME).  For CONFIG_SPI_NOR_SFDP_MINIMAL this is the 8-bit value from bits 31:24 of DW16 identifying ways a device can be placed into 4-byte addressing mode.  If provided as a non-zero value the driver assumes that 4-byte addressing is require to access the full address range, and automatically puts the device into 4-byte address mode when the device is initialized. ``` |
| `page-size` | `int` | ```text Number of bytes in a page from JESD216 BFP DW11  This property is only used in the CONFIG_SPI_NOR_SFDP_MINIMAL configuration. It is ignored if the device is configured to use SFDP data from the sfdp-bfp property (CONFIG_SPI_NOR_SFDP_DEVICETREE) or if the SFDP parameters are read from the device at runtime (CONFIG_SPI_NOR_SFDP_RUNTIME).  The default value is 256 bytes if the value is not specified. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “st,stm32-xspi-nor” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text Flash Memory base address and size in bytes ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
